--- a/src/TicketManagement.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/TicketManagement.WebUI/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
+        <div class="container">
         @if (requestCulture is not null)
         {
             <div class="row justify-content-between">
@@ -53,6 +54,7 @@
                 </div>
             </div>
         }
+        </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
