--- a/src/TicketManagement.WebUI/ClientApp/src/views/EventsManagement/SelectVenues.css
+++ b/src/TicketManagement.WebUI/ClientApp/src/views/EventsManagement/SelectVenues.css
@@ -1,11 +1,11 @@
-.left {
+.venues_left {
     display: table-cell;
     zoom: 1.18;
     margin-right: -100%;
     margin-top: -10%;
 }
 
-.right {
+.venues_right {
     display: table-cell;
     text-align: left;
     line-height: 1;
@@ -13,18 +13,18 @@
     padding-top: 50px;
 }
 
-    .left a, .right a {
+    .venues_left a, .venues_right a {
         display: inline-block;
         position: relative;
     }
 
-.wrap.right hr {
+.wrap.venues_right hr {
 
     height: 100px;
     visibility: hidden;
     margin-bottom: -1px;
 }
-.wrap.left hr {
+.wrap.venues_left hr {
     height: -100px;
     visibility: hidden;
     margin-bottom: -1px;
