--- a/src/TicketManagement.WebUI/ClientApp/src/views/Home/Home.css
+++ b/src/TicketManagement.WebUI/ClientApp/src/views/Home/Home.css
@@ -5,8 +5,7 @@
   }
   
   .footer {
-    position: fixed;
-    bottom: 0;
+    position: absolute;
     width: 100%;
     white-space: nowrap;
     line-height: 60px;
